welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:3: error: type yellow is not a member of object java.awt.Color
	faireV(c: Color.yellow)
                        ^