welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
	faireV(c: Color.yellow)
	faireV(Color.red)
	faireV(Color.blue)
	faireV(Color.green)
}
def faireV(c:Color) {
	avance()
	colorierSol(c:Color)
	avance()
	gauche()
	avance()
	colorierSol(c:Color)
	retourne()
	avance()
	gauche()
	avance()
	colorierSol(c:Color)
	avance()
	gauche()
	
}
def colorierSol(c:Color){
	setCouleurBrosse(c:Color)
	baisseBrosse()
	leveBrosse()
}
